styles.css
html {
  height: 100%;
  position: relative;
  width: 109%;
}

body {
  background-color: #c6dec6;
  color: #758173;
  font-family: "Quicksand", sans-serif;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0;
  width: 100%;
}

.top-section-nav {
  align-items: flex-end;
  background-color: #a9c5a0;
  display: flex;
  flex-direction: row;
  height: 23vh;
  justify-content: space-between;
  width: 100%;
}

.list-items-container {
  align-items: flex-end;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-left: 5%;
}

button {
  color: #758173;
  border: none;
  background-color: #a9c5a0;
  display: flex;
  flex-direction: row;
}

.nav-icon {
  height: 3vh;
  width: 2vw;
}

.nav-list-item {
  border: 0;
  font-size: 15px;
  height: 5vh;
  width: 184px;
}

.right-side-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 17vh;
  justify-content: space-between;
  margin-right: 18%;
}

.user-container {
  display: flex;
  flex-direction: row;
  height: 5vh;
  width: 15vw;
}

.user-icon,
.down-arrow {
  height: 4vh;
  width: 2vw;
}

.site-logo-image {
  height: 13vh;
  width: 6vw;
}

.cats-view-container {
  align-items: center;
  background-color: #c6dec6;
  display: flex;
  flex-direction: row;
  height: 15vh;
  margin-top: 3%;
  width: 109%;
}

.cats-view {
  background-color: #c6dec6;
  font-size: 35px;
  margin-left: 5%;
}

.cards-grid {
  display: flex;
  flex-direction: row;
  height: 45vh;
  margin-top: 3%;
  width: 85vw;
}

.card {
  background-color: #fae3e3;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 99%;
  justify-content: space-between;
  margin: 1%;
  overflow-wrap: break-word;
  width: 80%;
}

.top-section {
  align-items: flex-start;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: row;
  height: 25vh;
  justify-content: space-around;
  max-height: 49%;
  max-width: 100%;
}

.text-section {
  display: flex;
  flex-direction: column;
  margin-left: 12%;
  margin-right: 15%;
  margin-top: 4%;
}

.name,
.breed,
.favorite-toy,
.toy,
.views,
.view-count,
.shots,
.shots-two {
  margin: 0;
}

.toys-section {
  padding-bottom: 9px;
}

.top-right-of-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.views {
  color: black;
  font-size: 20px;
}

.view-count {
  color: black;
  font-size: 35px;
}

.link {
  background-color: #5d4e60;
  color: white;
  font-size: 12px;
  margin-left: 1%;
  margin-right: 1%;
}

.top-section-icon {
  height: 5vh;
  width: 3vw;
}

.one {
  background-image: url(./assets/cat_one.jpg);
}

.two {
  background-image: url(./assets/cat_two.jpg);
}

.three {
  background-image: url(./assets/cat_three.jpg);
}

.four {
  background-image: url(./assets/cat_nine.jpg);
}

.five {
  background-image: url(./assets/cat_ten.jpg);
}

.six {
  background-image: url(./assets/cat_six.jpg);
}

.seven {
  background-image: url(./assets/cat_seven.jpg);
}

.eight {
  background-image: url(./assets/cat_eight.jpg);
}

.breed,
.shots,
.favorite-toy {
  font-size: 12px;
}

